disable scrollbar overflow change to stop playbar not becoming sticky until root issue is resolved

--- a/css/main/scrollbar.css
+++ b/css/main/scrollbar.css
@@ -127,5 +127,5 @@ body:hover ::-webkit-scrollbar-thumb, body:hover ._3xRRJfD2xy95i9NhJxLTp0 *::-we
 }
 
 .HorizontalMiniSliderScroll {
-  overflow: hidden !important;
+  /* overflow: hidden !important; */
 }
